Reduced level of library to Java 1.8