@@ -67,7 +67,7 @@ public class EnumFieldDefinitionDomain extends AbstractFieldDefinitionDomain imp
     if (this == toCompare) {
       result = true;
     } else if (toCompare instanceof EnumFieldDefinition) {
-      final var that = (EnumFieldDefinition) toCompare;
+      final EnumFieldDefinition that = (EnumFieldDefinition) toCompare;
       result = super.equals(toCompare) && (this.getValues().containsAll(that.getValues()) && that.getValues().containsAll(this.getValues()));
     } else {
       result = false;
@@ -135,12 +135,12 @@ public class EnumFieldDefinitionDomain extends AbstractFieldDefinitionDomain imp
   public boolean isValid(final String toTest) {
     final boolean result;
 
-    if (null == toTest || toTest.isBlank()) {
+    if (null == toTest || toTest.trim().isEmpty()) {
       result = false;
     } else {
       final String trimmed = toTest.trim();
       final Optional<String> match = this.getValues().parallelStream().filter(value -> trimmed.equalsIgnoreCase(value)).findFirst();
-      result = !match.isEmpty();
+      result = match.isPresent();
     }
 
     return result;
